--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#">BLOGS</a>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link" href="#">EVENTS</a>
+              <a class="nav-link" href="https://ment-helth-events.netlify.app/" target="_blank">EVENTS</a>
             </li>
             <li class="nav-item dropdown me-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
@@ -51,7 +51,7 @@
               </ul>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link" href="#">HELP US</a>
+              <a class="nav-link" href="https://sample-help-us.netlify.app/" target="_blank">HELP US</a>
             </li>
             <li class="nav-item me-5">
               <a class="nav-link" href="#">About Us</a>
