--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </p>
         </div>
       </div>
-      <div class="contact col-6 p-5 mt-4">
+      <div class="contact col-6 p-5 mt-4 w-auto">
         <h5>QUICK CONTACT</h5>
         <br>
         <br>
