--- a/index.html
+++ b/index.html
@@ -67,39 +67,33 @@
     </nav>
 
     <!-- blog content section -->
-
-        <div class="maindiv container-fluid pt-4" style="width: fit-content;">
-          <div class="content text-justify d-flex col-8">
-            <div class="firstimg">
-              <p>Lets Talk</p>
-              <img onload="resizeFtImage(this)" src="./images/firstpost.png" alt="">
-            </div>
-            </div>
-        
-
-          <!-- Video section -->
-
-          <div class="videos pt-5 mb-5 d-flex col-4">
-            
-            <!-- <h4>Videos</h4> --> 
-            <div class="subVid">
-              <p>Videos</p>
-            </div>
-            <div class="subVid">
-              <p>Teen Suicide Prevention</p>
-              <iframe src="https://youtube.com/embed/3BByqa7bhto" frameborder="0"></iframe>
-            </div>
-            <div class="subVid">
-              <p>Documentry</p>
-              <iframe src="https://youtube.com/embed/nXdd1q9l864" frameborder="0"></iframe>
-            </div>
-            <div class="subVid">
-              <p>The Bridge between Suicide and Life</p>
-              <iframe src="https://youtube.com/embed/7CIq4mtiamY" frameborder="0"></iframe>
-            </div>
-          </div>
+    <div class="maindiv">
+      <div class="right-side col-8">
+        <p>Recent Post</p>
+        <img onload="resizeFtImage(this)" src="./images/firstpost.png" class="firstimg" alt="">
+        <p>LetsTalk FeaturePost</p>
+        <h4>Smrithi's Story of finding Strength in Vulnerability from therapy</h4>
+      </div>
+      <div class="left-side col-4">
+        <p>Feature Post</p>
+        <div class="left-column d-flex">
+          <img src="./images/firstpost.png" class="leftimg" alt="">
+          <p>LetsTalk</p>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo suscipit voluptates temporibus cumque, quisquam reiciendis cum</div>
         </div>
+        <div class="left-column d-flex">
+          <img src="./images/firstpost.png" class="leftimg" alt="">
+          <p>LetsTalk</p>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo suscipit voluptates temporibus cumque, quisquam reiciendis cum</div>
         </div>
+        <div class="left-column d-flex">
+          <img src="./images/firstpost.png" class="leftimg" alt="">
+          <p>LetsTalk</p>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo suscipit voluptates temporibus cumque, quisquam reiciendis cum, a ullam velit amet unde ratione consequatur deleniti nostrum veritatis magnam, optio adipisci animi.</div>
+        </div>
+      </div>
+    </div>
+
 
         <!-- Trending Stories -->
         <div class="container-stories">
@@ -215,21 +209,21 @@
       <img src="./images/quotes1.jpg" class="card-img-top" alt="...">
     </div>
     <div class="card quoteCard" style="width: 18rem;">
-      <img src="./images/quotes1.jpg" class="card-img-top" alt="...">
+      <img src="./images/quotes2.jpg" class="card-img-top" alt="...">
     </div>
     <div class="card quoteCard" style="width: 18rem;">
-      <img src="./images/quotes1.jpg" class="card-img-top" alt="...">
+      <img src="./images/quotes3.png" class="card-img-top" alt="...">
     </div>
   </div>
   <div class="trending-cards d-flex">
     <div class="card quoteCard" style="width: 18rem;">
-      <img src="./images/quotes1.jpg" class="card-img-top" alt="...">
+      <img src="./images/quotes4.png" class="card-img-top" alt="...">
     </div>
     <div class="card quoteCard" style="width: 18rem;">
-      <img src="./images/quotes1.jpg" class="card-img-top" alt="...">
+      <img src="./images/quotes5.jpg" class="card-img-top" alt="...">
     </div>
     <div class="card quoteCard" style="width: 18rem;">
-      <img src="./images/quotes1.jpg" class="card-img-top" alt="...">
+      <img src="./images/quotes6.jpg" class="card-img-top" alt="...">
     </div>
   </div>
   
