--- a/index.html
+++ b/index.html
@@ -68,28 +68,34 @@
 
     <!-- blog content section -->
     <div class="maindiv">
-      <div class="right-side col-8">
+      <div class="right-side col-7">
         <p>Recent Post</p>
         <img onload="resizeFtImage(this)" src="./images/firstpost.png" class="firstimg" alt="">
-        <p>LetsTalk FeaturePost</p>
+        <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
         <h4>Smrithi's Story of finding Strength in Vulnerability from therapy</h4>
       </div>
-      <div class="left-side col-4">
+      <div class="left-side col-5">
         <p>Feature Post</p>
         <div class="left-column d-flex">
-          <img src="./images/firstpost.png" class="leftimg" alt="">
-          <p>LetsTalk</p>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo suscipit voluptates temporibus cumque, quisquam reiciendis cum</div>
+          <img src="./images/rightsideimg1.png" class="leftimg" alt="">
+          <div>
+              <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+              <p><strong>How Shruthi Spearheaded Her Issues around her Marital Life  Through Therapy</strong></p>
+          </div>   
         </div>
         <div class="left-column d-flex">
-          <img src="./images/firstpost.png" class="leftimg" alt="">
-          <p>LetsTalk</p>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo suscipit voluptates temporibus cumque, quisquam reiciendis cum</div>
+          <img src="./images/rightsideimg2.jpg" class="leftimg" alt="">
+          <div>
+            <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+            <p><strong>Psychological Impact of the COVID-19 Pandemic</strong></p>
+        </div>  
         </div>
         <div class="left-column d-flex">
-          <img src="./images/firstpost.png" class="leftimg" alt="">
-          <p>LetsTalk</p>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo suscipit voluptates temporibus cumque, quisquam reiciendis cum, a ullam velit amet unde ratione consequatur deleniti nostrum veritatis magnam, optio adipisci animi.</div>
+          <img src="./images/rightsideimg3.jpg" class="leftimg" alt="">
+          <div>
+            <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+            <p><strong>Peeping Into The “HUMAN”​ Side Of Entrepreneurship</strong></p>
+        </div>  
         </div>
       </div>
     </div>
@@ -102,21 +108,24 @@
           </div>
           <div class="trending-cards d-flex">
             <div class="card" style="width: 18rem;">
-              <img src="./images/trending1.png" class="card-img-top" alt="...">
+              <img src="./images/divyastory.png" class="card-img-top" alt="...">
               <div class="card-body">
+                <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+                <p class="card-text">Climbing the Ladder of Motivation and Leaving Behind Stress: This is Divya's Story</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="./images/sakshi.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
                 <p class="card-text">Confronting Her Fears and Anxiety Around Career Through Therapy: This is Sakshi’s Story</p>
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="./images/trending1.png" class="card-img-top" alt="...">
+              <img src="./images/shradha.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Confronting Her Fears and Anxiety Around Career Through Therapy: This is Sakshi’s Story</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img src="./images/trending1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+                <p class="card-text">Shardha Gets Out of Her Relationship Through Therapy</p>
               </div>
             </div>
           </div>
@@ -124,19 +133,23 @@
             <div class="card" style="width: 18rem;">
               <img src="./images/trending1.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+                <p class="card-text">Liberating Herself from Self-esteem Issues with Therapy: This is Anita’s Story</p>
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="./images/trending1.png" class="card-img-top" alt="...">
+              <img src="./images/himanshi.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+                <p class="card-text">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling
+                </p>
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="./images/trending1.png" class="card-img-top" alt="...">
+              <img src="./images/anurag.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
+                <p class="card-text">How Anurag handled his breakup and continued to thrive with the help of his counselor</p>
               </div>
             </div>
           </div>
