--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-light navDiv">
+    <nav class="navbar navbar-expand-lg bg-light navDiv sticky-lg-top">
       <div class="container-fluid w-75">
         <a class="navbar-brand" href="#"><img src="logo\Logo (1).png" alt="MentHealth Logo" style="width: 5rem;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,7 +75,7 @@
         <p>Recent Post</p>
         <img onload="resizeFtImage(this)" src="./images/firstpost.png" class="firstimg" alt="">
         <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-        <h4><a href="">Smrithi's Story of finding Strength in Vulnerability from therapy</a></h4>
+        <h4><a href="./trending stories/trendingstories1.html" target="_blank">Smrithi's Story of finding Strength in Vulnerability from therapy</a></h4>
       </div>
       <div class="left-side col-5">
         <p>Feature Post</p>
@@ -297,10 +297,10 @@
         <br>
         <span >Follow Us On : </span>
         <span class="icn ">
-          <a href="https://www.facebook.com/" style="color: white;"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/" style="color: rgb(249, 249, 249);"><i class="fa-brands fa-facebook-f"></i></a>
         </span >
         <span class="icn ">
-          <a href="https://twitter.com/login" style="color: white;"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://twitter.com/login" style="color: rgb(255, 255, 255);"><i class="fa-brands fa-twitter"></i></a>
         </span>
         </div>
       </div>
