--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>Recent Post</p>
         <img onload="resizeFtImage(this)" src="./images/firstpost.png" class="firstimg" alt="">
         <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-        <h4><a href="./trending stories/trendingstories1.html" target="_blank">Smrithi's Story of finding Strength in Vulnerability from therapy</a></h4>
+        <h4><a href="./trending stories/smrithi Story.html" target="_blank">Smrithi's Story of finding Strength in Vulnerability from therapy</a></h4>
       </div>
       <div class="left-side col-5">
         <p>Feature Post</p>
@@ -114,21 +114,21 @@
               <img src="./images/divyastory.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="">Climbing the Ladder of Motivation and Leaving Behind Stress: This is Divya's Story</a></p>
+                <p class="card-text"><a href="./trending stories/divya Story.html" target="_blank">Climbing the Ladder of Motivation and Leaving Behind Stress: This is Divya's Story</a></p>
               </div>
             </div>
             <div class="card" style="width: 18rem;">
               <img src="./images/sakshi.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="">Confronting Her Fears and Anxiety Around Career Through Therapy: This is Sakshi’s Story</a></p>
+                <p class="card-text"><a href="./trending stories/Sakshi Story.html" target="_blank">Confronting Her Fears and Anxiety Around Career Through Therapy: This is Sakshi’s Story</a></p>
               </div>
             </div>
             <div class="card" style="width: 18rem;">
               <img src="./images/shradha.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="">Shardha Gets Out of Her Relationship Through Therapy</a></p>
+                <p class="card-text"><a href="./trending stories/Shradha Story.html" target="_blank">Shardha Gets Out of Her Relationship Through Therapy</a></p>
               </div>
             </div>
           </div>
@@ -137,14 +137,14 @@
               <img src="./images/trending1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="">Liberating Herself from Self-esteem Issues with Therapy: This is Anita’s Story</a></p>
+                <p class="card-text"><a href="./trending stories/Anita Story.html" target="_blank">Liberating Herself from Self-esteem Issues with Therapy: This is Anita’s Story</a></p>
               </div>
             </div>
             <div class="card" style="width: 18rem;">
               <img src="./images/himanshi.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling</a>
+                <p class="card-text"><a href="" target="_blank">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling</a>
                 </p>
               </div>
             </div>
@@ -152,7 +152,7 @@
               <img src="./images/anurag.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="">How Anurag handled his breakup and continued to thrive with the help of his counselor</a></p>
+                <p class="card-text"><a href="" target="_blank">How Anurag handled his breakup and continued to thrive with the help of his counselor</a></p>
               </div>
             </div>
           </div>
