trending cards completed

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <img src="./images/himanshi.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="" target="_blank">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling</a>
+                <p class="card-text"><a href="./trending stories/himanshi Story.html" target="_blank">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling</a>
                 </p>
               </div>
             </div>
@@ -152,7 +152,7 @@
               <img src="./images/anurag.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-                <p class="card-text"><a href="" target="_blank">How Anurag handled his breakup and continued to thrive with the help of his counselor</a></p>
+                <p class="card-text"><a href="./trending stories/Anurag Story.html" target="_blank">How Anurag handled his breakup and continued to thrive with the help of his counselor</a></p>
               </div>
             </div>
           </div>
