all pages uploaded

--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
           <img src="./images/rightsideimg1.png" class="leftimg" alt="">
           <div>
               <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-              <p><a href=""><strong>How Shruthi Spearheaded Her Issues around her Marital Life  Through Therapy</strong></a></p>
+              <p><a href="./trending stories/shruthi Story.html" target="_blank"><strong>How Shruthi Spearheaded Her Issues around her Marital Life  Through Therapy</strong></a></p>
           </div>   
         </div>
         <div class="left-column d-flex">
           <img src="./images/rightsideimg2.jpg" class="leftimg" alt="">
           <div>
             <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-            <p><a href=""><strong>Psychological Impact of the COVID-19 Pandemic</strong></a></p>
+            <p><a href="./trending stories/Psychological Impact of Covid.html" target="_blank"><strong>Psychological Impact of the COVID-19 Pandemic</strong></a></p>
         </div>  
         </div>
         <div class="left-column d-flex">
           <img src="./images/rightsideimg3.jpg" class="leftimg" alt="">
           <div>
             <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-            <p><a href=""><strong>Peeping Into The “HUMAN”​ Side Of Entrepreneurship</strong></a></p>
+            <p><a href=""><strong>Kavya Finally Healed From a Wrong Relationship Damage</strong></a></p>
         </div>  
         </div>
       </div>
