--- a/trending stories/Anita Story.html
+++ b/trending stories/Anita Story.html
@@ -77,7 +77,7 @@
             <div class="content text-justify">
               <div class="card cards ">
                 <div class="card-body">
-                  <h5 class="card-title">Liberating Herself from Self-esteem Issues with Therapy: This is Anita’s Story</h5>
+                  <h5 class="card-title h2">Liberating Herself from Self-esteem Issues with Therapy: This is Anita’s Story</h5>
                   <img src="./images/anita.png" alt="" class="firstimg">
                   <p class="card-text">Culturally rooted in the lands of Haryana and Rajasthan and currently residing in Odisha,<br><br>
 
