--- a/trending stories/Sakshi Story.html
+++ b/trending stories/Sakshi Story.html
@@ -77,7 +77,7 @@
             <div class="content text-justify">
               <div class="card cards ">
                 <div class="card-body">
-                  <h5 class="card-title">Confronting Her Fears and Anxiety Around Career Through Therapy: This is Sakshi’s Story</h5>
+                  <h5 class="card-title h2">Confronting Her Fears and Anxiety Around Career Through Therapy: This is Sakshi’s Story</h5>
                   <img src="./images/sakshi.png" alt="" class="firstimg">
                   <p class="card-text">Each of us, at some point of time, question our true potential and think of changing our occupations but very few are bold enough to make that decision. <br><br>
 
