--- a/trending stories/divya Story.html
+++ b/trending stories/divya Story.html
@@ -77,7 +77,7 @@
             <div class="content text-justify">
               <div class="card cards ">
                 <div class="card-body">
-                  <h5 class="card-title">Climbing the Ladder of Motivation and Leaving Behind Stress: This is Divya’s Story.</h5>
+                  <h5 class="card-title h2">Climbing the Ladder of Motivation and Leaving Behind Stress: This is Divya’s Story.</h5>
                   <img src="./images/divyastory.png" alt="" class="firstimg">
                   <p class="card-text">From the lands of folk music and embroidery – Haryana, comes Divya. Our young zestful, vibrant, full-of-life 25-year-old, who is an easygoing,   jolly person and loves interacting and socialising with people. <br><br>
 
