--- a/trending stories/himanshi Story.html
+++ b/trending stories/himanshi Story.html
@@ -77,7 +77,7 @@
             <div class="content text-justify">
               <div class="card cards ">
                 <div class="card-body">
-                  <h5 class="card-title">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling</h5>
+                  <h5 class="card-title h2">How Himanshi’s Opinion On Mental Health Changed As She Confidently Handled Her Toxic Relationships With The Help Of Counseling</h5>
                   <img src="./images/himanshi.png" alt="" class="firstimg">
                   <p class="card-text">Growing up in a challenging surroundings can alter a child’s behaviour pattern. For Himanshi, a 21-year-old student of Design from Jamshedpur, her childhood was a long haul. She grew up dealing with toxic relationships and the stressful emotions these put her through.
 
