--- a/trending stories/smrithi Story.html
+++ b/trending stories/smrithi Story.html
@@ -77,7 +77,7 @@
             <div class="content text-justify">
               <div class="card cards ">
                 <div class="card-body">
-                  <h5 class="card-title">Smrithi’s Story of Finding Strength In Vulnerability from Therapy</h5>
+                  <h5 class="card-title h2">Smrithi’s Story of Finding Strength In Vulnerability from Therapy</h5>
                   <img src="./images/firstpost.png" alt="" class="firstimg">
                   <p class="card-text">Smrithi is a 29-year-old from Delhi. She works in IT and moved to Bangalore for work and new beginnings.
 
