--- a/trending stories/Anurag Story.html
+++ b/trending stories/Anurag Story.html
@@ -77,7 +77,7 @@
             <div class="content text-justify">
               <div class="card cards ">
                 <div class="card-body">
-                  <h5 class="card-title">How Anurag handled his breakup and continued to thrive with the help of his counselor</h5>
+                  <h5 class="card-title h2">How Anurag handled his breakup and continued to thrive with the help of his counselor</h5>
                   <img src="./images/anurag.png" alt="" class="firstimg">
                   <p class="card-text">Romantic relationships are where we bury ourselves emotionally into our partners. It gives us purpose and opportunity for most of us to grow and plant ourselves. <br><br>
 
