--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <img src="./images/rightsideimg3.jpg" class="leftimg" alt="">
           <div>
             <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
-            <p><a href=""><strong>Kavya Finally Healed From a Wrong Relationship Damage</strong></a></p>
+            <p><a href="./trending stories/kavya Story.html" target="_blank"><strong>Kavya Finally Healed From a Wrong Relationship Damage</strong></a></p>
         </div>  
         </div>
       </div>
