--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <!-- blog content section -->
     <div class="maindiv">
       <div class="right-side col-7">
-        <p>Recent Post</p>
+        <p class="headingtext"><a href="">Recent Post</a></p>
         <img onload="resizeFtImage(this)" src="./images/firstpost.png" class="firstimg" alt="">
         <p><u><a href="">#LetsTalk #YouAreNotAlone</a></u></p>
         <h4><a href="./trending stories/smrithi Story.html" target="_blank">Smrithi's Story of finding Strength in Vulnerability from therapy</a></h4>
       </div>
       <div class="left-side col-5">
-        <p>Feature Post</p>
+        <p class="headingtext"><a href="">Feature Post</a></p>
         <div class="left-column d-flex">
           <img src="./images/rightsideimg1.png" class="leftimg" alt="">
           <div>
